fixed some style bugs that appeared on iOS, still need to fix the background transition.

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 @import "reset";
 
 html {
-	font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 a {
@@ -18,102 +18,103 @@ a:hover {
 }
 
 .title {
-	font-family: "Wire One", sans-serif;
-	font-size: 14rem;
-	text-align: left;
-	letter-spacing: 1.6rem;
-	color: white;
-	width: 50rem;
-	margin: 0 auto;
-	font-weight: 300;
+  font-family: "Wire One", sans-serif;
+  font-size: 14rem;
+  text-align: left;
+  letter-spacing: 1.6rem;
+  color: white;
+  width: 50rem;
+  margin: 0 auto;
+  font-weight: 300;
 }
 
 .subtext {
-	font-family: "Lora", serif;
-	color: white;
-	text-align: left;
-	font-size: 1.8rem;
-	padding-top: 3rem;
-	width: 50rem;
-	margin: 0 auto;
-	line-height: 2.6rem;
+  font-family: "Lora", serif;
+  color: white;
+  text-align: left;
+  font-size: 1.8rem;
+  padding-top: 3rem;
+  width: 50rem;
+  margin: 0 auto;
+  line-height: 2.6rem;
 }
 
 input:focus {
-	outline: none; 
+  outline: none; 
 }
 
 .body-container {
-	-webkit-background-size: cover;
-  		-moz-background-size: cover;
-  			-o-background-size: cover;
-  	background-size: cover;
+  background: url(img/bento.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+      -moz-background-size: cover;
+        -o-background-size: cover;
+  background-size: cover;
 
-	-webkit-transition: background-image 1.5s linear;
-	-moz-transition: background-image 1.5s linear;
-	-o-transition: background-image 1.5s linear;
-	-ms-transition: background-image 1.5s linear;
-	transition: background-image 1.5s linear;
+  -webkit-transition: background-image 1.5s linear;
+  -moz-transition: background-image 1.5s linear;
+  -o-transition: background-image 1.5s linear;
+  -ms-transition: background-image 1.5s linear;
+  transition: background-image 1.5s linear;
 }
 
 .gradient {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
   width: 100%;
-	display: table;
-	height: 100vh;
+  display: table;
+  height: 100vh;
 }
 
 .container {
   margin: 0 auto;
   padding-top: 8rem;
-	overflow: hidden;
-	width: 45rem;
-	vertical-align: middle;
-	white-space: nowrap;
+  overflow: hidden;
+  width: 45rem;
+  vertical-align: middle;
+  white-space: nowrap;
 }
 
 #search {
-	width: 35rem;
-	height: 5rem;
-	background: white;
-	border: none;
-	font-size: 1.4rem;
-	float: left;
-	padding-left: 1.5rem;
+  width: 35rem;
+  height: 5rem;
+  background: white;
+  border: none;
+  font-size: 1.4rem;
+  float: left;
+  padding-left: 1.5rem;
 }
 
 $button-color: #CFCFCF;
 
 #search::-webkit-input-placeholder {
-   	color: $button-color;
+    color: $button-color;
 }
  
 #search:-moz-placeholder { /* Firefox 18- */
-   	color: $button-color;  
+    color: $button-color;  
 }
  
 #search::-moz-placeholder {  /* Firefox 19+ */
-   	color: $button-color;  
+    color: $button-color;  
 }
  
 #search:-ms-input-placeholder {  
-   	color: $button-color;  
+    color: $button-color;  
 }
  
 .button:hover{
-   	background: white;
+    background: white;
 }
 
 .button {
-  	font-size: 1.2rem;
-  	letter-spacing: 3px;
-  	outline: none;
-  	opacity: 1;
-  	border: none;
-  	background: #232833;
-  	height: 5rem;
-  	width: 10rem;
-  	color: #CFCFCF;
+    font-size: 1.2rem;
+    letter-spacing: 3px;
+    outline: none;
+    opacity: 1;
+    border: none;
+    background: #232833;
+    height: 5rem;
+    width: 10rem;
+    color: #CFCFCF;
 }
 
 
@@ -130,41 +131,41 @@ $button-color: #CFCFCF;
 
 
 .contact {
-	width: 100%;
-	background-color: #364447;
-	height: 15rem;
-	font-size: 1.5rem;
+  width: 100%;
+  background-color: #364447;
+  height: 15rem;
+  font-size: 1.5rem;
 
-	p {
-		line-height: 15rem;
-		color: white;
-		text-align: center;
-	}
+  p {
+    line-height: 15rem;
+    color: white;
+    text-align: center;
+  }
 
-	a {
-		color: white;
-	}
+  a {
+    color: white;
+  }
 
-	a:visited {
-		color: white;
-	}
+  a:visited {
+    color: white;
+  }
 
-	a:hover {
-		color: #2478FA;
-	}
+  a:hover {
+    color: #2478FA;
+  }
 
 }
 
 .row-three-col {
-	width: 100rem;
-	margin: 0 auto;
+  width: 100rem;
+  margin: 0 auto;
 }
 
 .three-col {
-	float: left;
-	width: 33.3%;
-	margin: 0 auto;
-	
+  float: left;
+  width: 33.3%;
+  margin: 0 auto;
+  
 }
 
 input[type=text]::-ms-clear {  display: none; width : 0; height: 0; }
@@ -174,11 +175,10 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
 
-.no-data {
-  font-size: 4rem;
-  text-align: center;
-  padding: 4rem 0;
-  font-family: wire one;
+input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0; 
+  border-radius: 0;
 }
 
 @media screen and (max-width: 1000px) {
@@ -215,6 +215,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
   .container {
     width: 31rem;
+    padding-top: 5rem;
   }
 
   #search {
@@ -225,6 +226,12 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   .button {
     width: 8rem;
   }
-
-
 }
+
+html, body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
+
+
