--- a/css/restaurantinfo.scss
+++ b/css/restaurantinfo.scss
@@ -4,6 +4,13 @@ restaurant-info, no-info {
   
 }
 
+.no-data {
+  font-size: 4rem;
+  text-align: center;
+  padding: 4rem 0;
+  font-family: wire one;
+}
+
 .results-box {
   margin: 0 auto;
   width: 60rem;
